# bitcoin-analysis

./: .gitignore  ASSESSMENT.md  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/: docker-compose.yaml
airflow/dags/: dbt_pipeline_dag.py  dynamic_dags.py  manual_ingestion.py
airflow/plugins/: generate_data_dictionary.py
airflow/plugins/common/: __init__.py
dags/: coingecko_btc_ingestion.py  manual_ingestion.py  massive_market_ingestion.py
dags/dbt/analysis/: .user.yml  dbt_project.yml  profiles.yml
db-init/: 01-create-metadata-db.sh
dbt/analysis/: dbt_project.yml  profiles.yml
dbt/analysis/analyses/: check_holiday_overlaps.sql  check_holidays.sql
dbt/analysis/macros/: generate_external_location.sql
dbt/analysis/seeds/: eu_market_holidays.csv  uk_bank_holidays.csv  us_market_holidays.csv
dbt/analysis/tests/: assert_no_critical_gaps.sql
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  DATA_QUALITY.md  DEVELOPMENT.md  OPERATIONS.md  architecture.md  data_dictionary.md  dbt_docs.html
plugins/common/: __init__.py
plugins/common/adapters/: __init__.py  base.py  coingecko.py  massive.py
plugins/common/contracts/: __init__.py  loader.py
plugins/common/core/: __init__.py  api_client.py  asset_catalog.py  components.py  transformer.py  validator.py  writer.py
reports/: ANALYSIS.md  EXTRA_CREDIT.md
scripts/: generate_analysis_charts.py
tests/: conftest.py
tests/common/adapters/: test_coingecko.py
tests/common/core/: test_transformer.py  test_validator.py  test_validator_empty.py  test_writer.py
(+69 files in other folders)
