[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-analysis"
version = "0.1.0"
description = "Bitcoin vs Traditional Assets Analysis Pipeline"
authors = [{name = "barath"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests==2.32.5",
    "pandas==2.3.3",
    "pyarrow==23.0.0",
    "pyyaml==6.0.3",
    "soda-core-duckdb==3.5.6",
    "dbt-duckdb==1.10.0",
    "dbt-core==1.11.2",
    "pytest==9.0.2",
    "dbt-artifacts-parser",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["airflow*", "dbt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "airflow"]